test/missing_enddef.ref
Error: File "missing_enddef.cppo", line 3, characters 0-13
Error: This #def is never closed: perhaps #enddef is missing
